rusty-cdk-macros/tests/fails/app_sync_api_name_too_long.rs
use rusty_cdk_macros::app_sync_api_name;

fn example() {
    let bucket = app_sync_api_name!("long-long-long-long-long-long-long-long-long-long-long-long-long-api-name");
}

fn main() {}